# performance-engineering-ucu

./: .gitignore  LICENSE  README.md  requirements.txt
common/: tools.py
homework_1/: CMakeLists.txt  main.cpp  report.md  task.md
homework_2/: CMakeLists.txt  array_multiplication_experiment.py  element-wise-multiplication.cpp  plot.py  plot_all_graphs.py  plot_cpp_graphs.py  report.md  tools.py
homework_2/data/: arrays_by_elements_times_python.csv  execution_time_O0.csv  execution_time_O3.csv  execution_time_intristics_O0.csv  execution_time_intristics_O3.csv  numpy_arrays_times_python.csv
homework_3/: CMakeLists.txt  README.md  main.py  matrix_manipulation.py  matrix_manipulation_ctypes.py  matrix_manipulation_lib.cpp  matrix_manipulation_native.py  matrix_manipulation_numpy.py  report.md
homework_3/data/: a_1_by_elements_times.csv  a_2_threshold_times.csv  a_3_reversed_threshold_times.csv  a_4_add_times.csv  a_5_sum_times.csv  b_1_numpy_multiplication_times.csv  b_2_numpy_threshold_times.csv  b_3_numpy_reverse_threshold_times.csv  b_4_numpy_add_times.csv  b_5_sum_times.csv  c_1_numpy_multiplication_times.csv  c_2_numpy_threshold_times.csv  c_3_numpy_reverse_threshold_times.csv  c_4_numpy_add_times.csv  c_5_sum_times.csv
homework_4/: CMakeLists.txt  README.md  main.cpp  matrix_manipulation.cu  matrix_manipulation.cuh  matrix_manipulation_cuda_ctypes.py  report.md
practice_1/: .gitignore  fibo.c
